feat: Refactor property details and home components, add notification pane and mini map

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,7 +18,7 @@
     --text: 27, 28, 22; /* #1B1C16 */
     --grey: 217, 217, 217; /* #D9D9D9 */
     --grey-100: 148, 148, 172; /* #9494AC */
-    --error: 255, 122, 104; /* #FF7A68 */
+    --error: 243, 13, 13; /* ##F30D0D */
     --warning: 255, 255, 0; /* #ffff00 */
     --success: 79, 191, 103; /* #4FBF67 */
     --info: 0, 0, 255; /* #0000ff */
@@ -65,7 +65,7 @@ html.light {
     --text: 27, 28, 22; /* #1B1C16 */
     --grey: 217, 217, 217; /* #D9D9D9 */
     --grey-100: 148, 148, 172; /* #9494AC */
-    --error: 255, 122, 104; /* #FF7A68 */
+    --error: 243, 13, 13; /* ##F30D0D */
     --warning: 255, 255, 0; /* #ffff00 */
     --success: 79, 191, 103; /* #4FBF67 */
     --info: 0, 0, 255; /* #0000ff */
@@ -87,7 +87,7 @@ html.dark {
     --text: 27, 28, 22; /* #1B1C16 */
     --grey: 217, 217, 217; /* #D9D9D9 */
     --grey-100: 148, 148, 172; /* #9494AC */
-    --error: 255, 122, 104; /* #FF7A68 */
+    --error: 243, 13, 13; /* ##F30D0D */
     --warning: 255, 255, 0; /* #ffff00 */
     --success: 79, 191, 103; /* #4FBF67 */
     --info: 0, 0, 255; /* #0000ff */
